# orion

./: .gitignore  LICENSE
backend/: controller.py  dockerfile  main.py  pyproject.toml  schema.py
backend/agent/: builder.py  config.py  nodes.py  state.py  utils.py
backend/agent/prompt/: orion.py  thread_title.py
backend/auth/: dependencies.py  routes.py  schemas.py  utils.py
backend/db/: dependencies.py  pool.py
backend/migrations/: 001_add_users_table.sql  002_add_anonymous_usage_table.sql
backend/persistance/: fire_and_forget.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AuthModal.jsx  ChatArea.jsx  FeedbackModal.jsx  Message.jsx  ShareModal.jsx  Sidebar.jsx
