[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
]
